--- a/notebooks/Cat_ii.ipynb
+++ b/notebooks/Cat_ii.ipynb
@@ -14,9 +14,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\NguyenAnhTuan\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3058: DtypeWarning: Columns (51) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"../input/train_cat.csv\")"
+    "df = pd.read_csv(\"../input/kalapa/train_kalapa.csv\")"
    ]
   },
   {
@@ -46,177 +55,177 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>bin_0</th>\n",
-       "      <th>bin_1</th>\n",
-       "      <th>bin_2</th>\n",
-       "      <th>bin_3</th>\n",
-       "      <th>bin_4</th>\n",
-       "      <th>nom_0</th>\n",
-       "      <th>nom_1</th>\n",
-       "      <th>nom_2</th>\n",
-       "      <th>nom_3</th>\n",
+       "      <th>label</th>\n",
+       "      <th>province</th>\n",
+       "      <th>district</th>\n",
+       "      <th>age_source1</th>\n",
+       "      <th>age_source2</th>\n",
+       "      <th>maCv</th>\n",
+       "      <th>FIELD_1</th>\n",
+       "      <th>FIELD_2</th>\n",
+       "      <th>FIELD_3</th>\n",
        "      <th>...</th>\n",
-       "      <th>nom_9</th>\n",
-       "      <th>ord_0</th>\n",
-       "      <th>ord_1</th>\n",
-       "      <th>ord_2</th>\n",
-       "      <th>ord_3</th>\n",
-       "      <th>ord_4</th>\n",
-       "      <th>ord_5</th>\n",
-       "      <th>day</th>\n",
-       "      <th>month</th>\n",
-       "      <th>target</th>\n",
+       "      <th>FIELD_48</th>\n",
+       "      <th>FIELD_49</th>\n",
+       "      <th>FIELD_50</th>\n",
+       "      <th>FIELD_51</th>\n",
+       "      <th>FIELD_52</th>\n",
+       "      <th>FIELD_53</th>\n",
+       "      <th>FIELD_54</th>\n",
+       "      <th>FIELD_55</th>\n",
+       "      <th>FIELD_56</th>\n",
+       "      <th>FIELD_57</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Red</td>\n",
-       "      <td>Trapezoid</td>\n",
-       "      <td>Hamster</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>...</td>\n",
-       "      <td>02e7c8990</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Contributor</td>\n",
-       "      <td>Hot</td>\n",
-       "      <td>c</td>\n",
-       "      <td>U</td>\n",
-       "      <td>Pw</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2547.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Red</td>\n",
-       "      <td>Star</td>\n",
-       "      <td>Axolotl</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>f37df64af</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Grandmaster</td>\n",
-       "      <td>Warm</td>\n",
-       "      <td>e</td>\n",
-       "      <td>X</td>\n",
-       "      <td>pE</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Tỉnh Đồng Nai</td>\n",
+       "      <td>Thành phố Biên Hòa</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>29.77</td>\n",
+       "      <td>17.561</td>\n",
+       "      <td>30.955</td>\n",
+       "      <td>31.171</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Red</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Hamster</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Freezing</td>\n",
-       "      <td>n</td>\n",
-       "      <td>P</td>\n",
-       "      <td>eN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>9.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Tỉnh Đồng Nai</td>\n",
+       "      <td>Huyện Long Thành</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Công nhân</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3273.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>29.77</td>\n",
+       "      <td>56.512</td>\n",
+       "      <td>30.955</td>\n",
+       "      <td>31.171</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Red</td>\n",
-       "      <td>Circle</td>\n",
-       "      <td>Hamster</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>...</td>\n",
-       "      <td>f9d456e57</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Novice</td>\n",
-       "      <td>Lava Hot</td>\n",
-       "      <td>a</td>\n",
-       "      <td>C</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Tỉnh Tuyên Quang</td>\n",
+       "      <td>Thành phố Tuyên Quang</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3991.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>T</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Red</td>\n",
-       "      <td>Triangle</td>\n",
-       "      <td>Hamster</td>\n",
-       "      <td>Costa Rica</td>\n",
-       "      <td>...</td>\n",
-       "      <td>c5361037c</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Grandmaster</td>\n",
-       "      <td>Cold</td>\n",
-       "      <td>h</td>\n",
-       "      <td>C</td>\n",
-       "      <td>OZ</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>12.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>Thành phố Hồ Chí Minh</td>\n",
+       "      <td>Quận 1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1450.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>29.77</td>\n",
+       "      <td>13.789</td>\n",
+       "      <td>30.955</td>\n",
+       "      <td>31.171</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
+       "<p>5 rows × 64 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  bin_0  bin_1  bin_2 bin_3 bin_4 nom_0      nom_1    nom_2       nom_3  \\\n",
-       "0   0    0.0    0.0    0.0     F     N   Red  Trapezoid  Hamster      Russia   \n",
-       "1   1    1.0    1.0    0.0     F     Y   Red       Star  Axolotl         NaN   \n",
-       "2   2    0.0    1.0    0.0     F     N   Red        NaN  Hamster      Canada   \n",
-       "3   3    NaN    0.0    0.0     F     N   Red     Circle  Hamster     Finland   \n",
-       "4   4    0.0    NaN    0.0     T     N   Red   Triangle  Hamster  Costa Rica   \n",
+       "   id  label               province               district  age_source1  \\\n",
+       "0   0      0                    NaN                    NaN          NaN   \n",
+       "1   1      0          Tỉnh Đồng Nai     Thành phố Biên Hòa         44.0   \n",
+       "2   2      0          Tỉnh Đồng Nai       Huyện Long Thành         30.0   \n",
+       "3   3      0       Tỉnh Tuyên Quang  Thành phố Tuyên Quang         43.0   \n",
+       "4   4      0  Thành phố Hồ Chí Minh                 Quận 1         21.0   \n",
        "\n",
-       "   ...      nom_9 ord_0        ord_1     ord_2 ord_3 ord_4  ord_5  day month  \\\n",
-       "0  ...  02e7c8990   3.0  Contributor       Hot     c     U     Pw  6.0   3.0   \n",
-       "1  ...  f37df64af   3.0  Grandmaster      Warm     e     X     pE  7.0   7.0   \n",
-       "2  ...        NaN   3.0          NaN  Freezing     n     P     eN  5.0   9.0   \n",
-       "3  ...  f9d456e57   1.0       Novice  Lava Hot     a     C    NaN  3.0   3.0   \n",
-       "4  ...  c5361037c   3.0  Grandmaster      Cold     h     C     OZ  5.0  12.0   \n",
+       "   age_source2       maCv  FIELD_1  FIELD_2  FIELD_3  ...  FIELD_48  FIELD_49  \\\n",
+       "0          NaN        NaN        1      1.0   2547.0  ...      True      True   \n",
+       "1         44.0       None        1      0.0     -1.0  ...     False      True   \n",
+       "2         30.0  Công nhân        0      1.0   3273.0  ...      True      True   \n",
+       "3          NaN        NaN        0      1.0   3991.0  ...      True     False   \n",
+       "4         21.0       None        0      1.0   1450.0  ...      True      True   \n",
        "\n",
-       "  target  \n",
-       "0      0  \n",
-       "1      0  \n",
-       "2      0  \n",
-       "3      0  \n",
-       "4      0  \n",
+       "   FIELD_50 FIELD_51 FIELD_52 FIELD_53 FIELD_54 FIELD_55 FIELD_56 FIELD_57  \n",
+       "0       NaN      NaN      NaN      NaN      NaN      NaN      NaN      NaN  \n",
+       "1     29.77   17.561   30.955   31.171      0.0     0.04      0.0      0.0  \n",
+       "2     29.77   56.512   30.955   31.171      0.0     0.16      0.0      0.0  \n",
+       "3       NaN      NaN      NaN      NaN      NaN      NaN      NaN      NaN  \n",
+       "4     29.77   13.789   30.955   31.171      0.0     0.03      0.0      0.0  \n",
        "\n",
-       "[5 rows x 25 columns]"
+       "[5 rows x 64 columns]"
       ]
      },
      "execution_count": 3,
@@ -236,9 +245,18 @@
     {
      "data": {
       "text/plain": [
-       "N    312344\n",
-       "Y    269609\n",
-       "Name: bin_4, dtype: int64"
+       "Thành phố Hồ Chí Minh    2389\n",
+       "Tỉnh Đồng Nai            1033\n",
+       "Tỉnh Bình Dương           807\n",
+       "Thành phố Hà Nội          667\n",
+       "Tỉnh Tiền Giang           641\n",
+       "                         ... \n",
+       "Tỉnh Kon Tum               34\n",
+       "Tỉnh Hà Giang              31\n",
+       "Tỉnh Hòa Bình              30\n",
+       "Tỉnh Lai Châu              19\n",
+       "Tỉnh Vĩnh phúc             17\n",
+       "Name: province, Length: 65, dtype: int64"
       ]
      },
      "execution_count": 4,
@@ -247,30 +265,7 @@
     }
    ],
    "source": [
-    "df.bin_4.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Red      323286\n",
-       "Blue     205861\n",
-       "Green     52601\n",
-       "Name: nom_0, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.nom_0.value_counts()"
+    "df.province.value_counts()"
    ]
   },
   {
@@ -281,13 +276,18 @@
     {
      "data": {
       "text/plain": [
-       "Freezing       142726\n",
-       "Warm           124239\n",
-       "Cold            97822\n",
-       "Boiling Hot     84790\n",
-       "Hot             67508\n",
-       "Lava Hot        64840\n",
-       "Name: ord_2, dtype: int64"
+       "None                                    13203\n",
+       "Công nhân                                 766\n",
+       "công nhân                                 465\n",
+       "Nhân viên                                 304\n",
+       "Giáo viên                                 215\n",
+       "                                        ...  \n",
+       "Công nhân đứng máy nhựa - Xưởng Nhựa        1\n",
+       "Nhân Viên Chăm sóc khách hàng               1\n",
+       "công nhân tổ cha bo                         1\n",
+       "CN-TH00Y                                    1\n",
+       "Nhân viên  thiết kế rập P.KT-CN             1\n",
+       "Name: maCv, Length: 3066, dtype: int64"
       ]
      },
      "execution_count": 6,
@@ -296,66 +296,7 @@
     }
    ],
    "source": [
-    "df.ord_2.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.0    113835\n",
-       "5.0    110464\n",
-       "6.0     97432\n",
-       "7.0     86435\n",
-       "1.0     84724\n",
-       "2.0     65495\n",
-       "4.0     23663\n",
-       "Name: day, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.day.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.0     79245\n",
-       "3.0     70160\n",
-       "5.0     68906\n",
-       "12.0    68340\n",
-       "6.0     60478\n",
-       "7.0     53480\n",
-       "1.0     52154\n",
-       "11.0    51165\n",
-       "2.0     40700\n",
-       "9.0     20620\n",
-       "4.0     14614\n",
-       "10.0     2150\n",
-       "Name: month, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.month.value_counts()"
+    "df.maCv.value_counts()"
    ]
   },
   {
@@ -366,9 +307,18 @@
     {
      "data": {
       "text/plain": [
-       "0    487677\n",
-       "1    112323\n",
-       "Name: target, dtype: int64"
+       "-1.0       6996\n",
+       " 4019.0     199\n",
+       " 3993.0     180\n",
+       " 3997.0     153\n",
+       " 2901.0     148\n",
+       "           ... \n",
+       " 6932.0       1\n",
+       " 4743.0       1\n",
+       " 4750.0       1\n",
+       " 8019.0       1\n",
+       " 6553.0       1\n",
+       "Name: FIELD_3, Length: 513, dtype: int64"
       ]
      },
      "execution_count": 9,
@@ -377,7 +327,113 @@
     }
    ],
    "source": [
-    "df.target.value_counts()"
+    "df.FIELD_3.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]                                                        12630\n",
+       "['DN']                                                     1855\n",
+       "['GD']                                                      429\n",
+       "['DN', 'DN']                                                344\n",
+       "['GD', 'GD']                                                232\n",
+       "                                                          ...  \n",
+       "['TE', 'GD', 'GD', 'DN', 'HS', 'TE', 'DN', 'GD', 'DN']        1\n",
+       "['DN', 'DN', 'HS', 'HT', 'HS']                                1\n",
+       "['DK', 'DN', 'TE']                                            1\n",
+       "['TE', 'GD', 'BT', 'GD', 'GD', 'TE', 'GD', 'DN']              1\n",
+       "['TE', 'GD', 'TN', 'TE']                                      1\n",
+       "Name: FIELD_7, Length: 7088, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.FIELD_7.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    19878\n",
+       "1    10122\n",
+       "Name: FIELD_32, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.FIELD_32.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.413     2665\n",
+       "21.478    1603\n",
+       "25.758     961\n",
+       "13.789     589\n",
+       "15.492     479\n",
+       "          ... \n",
+       "56.292       1\n",
+       "61.924       1\n",
+       "61.826       1\n",
+       "41.652       1\n",
+       "60.000       1\n",
+       "Name: FIELD_51, Length: 4525, dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.FIELD_51.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    29514\n",
+       "1      486\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.label.value_counts()"
    ]
   },
   {
